# hive

./: .env.example  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  main.py  pyproject.toml
src/hive/: __init__.py  cli.py
src/hive/agent/: agent.py  manager.py
src/hive/config/: loader.py  schema.py
src/hive/discord/: bot.py  bot_manager.py
src/hive/llm/: client.py  prompt_builder.py
src/hive/tools/: executor.py  mcp_bridge.py  registry.py  scheduler.py
src/openbuden/: __init__.py  cli.py
src/openbuden/agent/: agent.py  context.py  manager.py
src/openbuden/config/: __init__.py  loader.py  schema.py
src/openbuden/discord/: bot.py  bot_manager.py
src/openbuden/llm/: client.py  prompt_builder.py
src/openbuden/tools/: executor.py  mcp_bridge.py  registry.py  scheduler.py
