[project]
name = "hive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "discord-py>=2.6.4",
    "litellm>=1.81.6",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
hive = "hive.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
